# alexa-for-docs

./: .gitignore  AzureSearch.ipynb  Azuresearch.ipynb  DPR.ipynb  DPR_ML_Book .ipynb  DPR_ML_Book.ipynb  Elasticsearch_and_Eval.ipynb  ElstaicSearch_ML_Book.ipynb  Pulumi.bobby.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  config.ts  eval_dpr.ipynb  index.ts  package-lock.json  package.json  pyproject.toml  testing_elasticsearch.ipynb  tsconfig.json
Azure/: utils.py
infrastructure/: inference.ts  resourceGroup.ts  searchService.ts  storage.ts
processing/: onBlobUpload.test.ts  onBlobUpload.ts  onJsonUpload.test.ts  onJsonUpload.ts  pdf.test.ts  pdf.ts  state.ts  types.ts  verify.ts
processing/azure/: azureTable.test.ts  azureTable.ts  blob.ts  searchService.ts
processing/lib/: array.test.ts  array.ts  azureTable.test.ts  azureTable.ts  generateId.test.ts  generateId.ts  slack.test.ts  slack.ts  utils.test.ts  utils.ts
python/: Elasticsearch.ipynb  pyproject.toml
python/Azure/: Evaluating_az.ipynb  utils.py
python/Azure/onnx_reader/: onnx.py  onnx2.ipynb  onnx_test.ipynb  onnx_utils.py
python/eval_squad_retrievers/: azure.py  dpr.py  elasticsearch.py
python/eval_squad_retrievers/utils/: AzureSearch.ipynb  az_utils.py  utils.py
python/question_answering/: host.json  requirements.txt  test_predict.ipynb
python/question_answering/model/: config.json
python/question_answering/predict/: __init__.py  squad_utils.py
python/question_answering/tests/: test_onnx.py
test/: book.json
