[tool.poetry]
name = "alexa-for-docs"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "^7.10.0"
ipykernel = "^5.3.4"
farm-haystack = "^0.5.0"
azure-search-documents = "^11.0.0"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
