[tool.poetry]
name = "alexa-for-docs"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "4.0.1"
onnxruntime = "^1.6.0"
onnxruntime-tools = "^1.5.2"
torch = "1.7.1"
azure-search-documents = "^11.0.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
notebook = "^6.1.5"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
