[tool.poetry]
name = "alexa-for-docs"
version = "0.1.0"
description = ""
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
onnxruntime = "^1.6.0"
onnxruntime-tools = "^1.5.2"
torch = "^1.7.1"
transformers = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
notebook = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
